<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/optionView"
    android:background="@drawable/bloli4">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="8"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:text="@string/options"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="40sp"
            android:gravity="center" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/mute_music"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <CheckBox
            android:layout_weight="1"
            android:id="@+id/mute"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/activate_gravity_mode"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <CheckBox
            android:layout_weight="1"
            android:id="@+id/gravity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/activate_mozart_mode"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <CheckBox
            android:layout_weight="1"
            android:id="@+id/mozart"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/reset_best_score"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/resetscore"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/ok"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/backbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

</LinearLayout>

